data_url/data_url_9121.txt
Describe the bug
I have installed qunet sim using pip into my python venv, which installed version (0.1.2.post3). I have attempted to use the up to date get_qubit, get_data_qubits, functions, but these are not recognized when I attempt to use them. It provides the following error:
AttributeError: 'Host' object has no attribute 'get_qubits'
To Reproduce
Steps to reproduce the behavior:
Expected behavior
Method should be accepted attribute of host.
System:
I haven't yet updated the PyPI library yet, I can do this in the coming days.
In the mean time, you can use the source code directly since it will be the latest release.
I have the same issue : AttributeError: 'Host' object has no attribute 'get_qubits' with python version = 3.9.16 running on google colab
Hello, sorry, I no longer have the ability to merge PRs without a secondary reviewer and so this will need some more time. The pip version is still out of date. To overcome this, you can use QuNetSim from source (i.e., clone it).
Most of the examples have some errors that prevent them from running.
I have the same issue: AttributeError: 'Host' object has no attribute 'get_qubit'
How can it be installed in google Colab the latest release?
I have the same issue : AttributeError: 'Host' object has no attribute 'get_qubits' with python version = 3.9.16 running on google colab
I seems that if I change to get_data_qubit, things seem to work. Then there are other error appearing
I have the same issue : AttributeError: 'Host' object has no attribute 'get_qubits' with python version = 3.9.16 running on google colab
I seems that if I change to get_data_qubit, things seem to work. Then there are other error appearing
Yes, the PyPi version is not up to date with the documentation. The change is simply a refactor of the method name. This is the temporary workaround. We will update the PyPi version this week. Sorry for the trouble.
The PyPi version has been updated and the problem solved.
Thanks. The newest pypi release does not install properly:
raceback (most recent call last):
File "/usr/local/lib/python3.9/dist-packages/IPython/core/interactiveshell.py", line 3553, in run_code
exec(code_obj, self.user_global_ns, self.user_ns)
File "", line 2, in <cell line: 1>
import qunetsim
File "/usr/local/lib/python3.9/dist-packages/qunetsim/init.py", line 1, in 
from .components import Host, Network
File "/usr/local/lib/python3.9/dist-packages/qunetsim/components/init.py", line 1, in 
from .host import Host
File "/usr/local/lib/python3.9/dist-packages/qunetsim/components/host.py", line 1368
)
^
SyntaxError: unmatched ')'
Now seem to work
thanks
